[workspace]
members = ["media-rs"]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]

anyhow = "=1.0.83"
thiserror = "=1.0.59"

tokio = { version = "=1.36.0", features = ["full"] }
tokio-util = {version = "=0.7.10", features = ["full"]}
tokio-stream = { version = "=0.1.15", features = ["sync", "net"] }
tokio-rustls = "=0.25.0"
rustls = "=0.23.11"
rustls-pemfile = "=2.1.2"
webpki-roots = "=0.26.6"
# rustls-platform-verifier = "=0.3.4"

futures = "=0.3.30"
bytes = "=1.5.0"
parking_lot = "=0.12.1"

tracing = { version = "=0.1.40", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = {version = "=0.3.18", features = ["env-filter", "chrono"]}
tracing-appender = "=0.2.3"
time = {version = "=0.3.36", features = ["formatting", "macros"]}
# time = {version = "=0.3.34", features = ["formatting", "macros"]}

axum = { version = "=0.7.5", features = ["ws"] }
axum-server = { version = "=0.6.0", features = ["tls-rustls"] }
hyper = "=1.1.0"
# tower-service = "=0.3.2"
serde = {version = "=1.0.200", features = ["derive"]}
serde_json = "=1.0.116"

# redis = {version = "=0.25.2", features = []}
# redis = { version = "=0.25.3", features = ["tokio-comp", "json"] }
redis = { version = "=0.25.3", features = [ "cluster-async", "tokio-comp", "json", "sentinel" ] }

# tonic = "=0.11.0"
# tonic-build = "=0.11.0"
prost = "=0.12.4"
uuid = {version = "=1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
pretty-hex = "=0.4.1"

tokio-tungstenite = { version = "=0.21.0", features = ["rustls-tls-webpki-roots"] }
async-trait = "=0.1.80"
chrono = "=0.4.38"
deadpool = "=0.12.1"
# TinyUFO = "=0.2.0"
# pingora-memory-cache = "=0.2.0"
crossbeam-queue = "=0.3.11"
indexmap = "=2.2.6"

moka = {version = "=0.12.7", features = ["sync"]}
# moka 依赖 triomphe
# 0.1.12 编译会提示错误 use of unstable library feature 'ptr_addr_eq'
triomphe = "=0.1.11" 

bit-iter = "=1.2.0"
dashmap = "=5.5.3"
ulid = "=1.1.2"
clap = { version = "=4.5.4", features = ["derive", "env"] }
regex = "=1.10.4"
webrtc = "=0.11.0"
webrtc-util = "=0.9.0"
bytesize = "=1.3.0"
arc-swap = "=1.7.1"
config = "=0.14.0"
# frunk = "=0.4.2"
# frunk_core = "=0.4.2"
# struct_iterable = "=0.1.1"
bevy_reflect = "=0.14.0"
quinn = "=0.11.2"
const_format = "=0.2.32"
# if-watch = { version = "=3.2.0", features = ["tokio"] }
local-ip-address = "=0.6.1"
indoc = "=2.0.5"
sha1_smol = "=1.0.1"
atomic_bitfield = "=0.1.0"
num_enum = "=0.7.3"

# crossbeam-utils = "=0.8.20"
# human_bytes = { version = "=0.4.3", default-features = false }
# strum = "=0.26.2"
# strum_macros = "=0.26.2"

# enumflags2 = "=0.7.7"
# tynm = "=0.1.10"

# pretty-hex = "=0.4.1"
test-log = {version = "=0.2.16", default-features = false, features=["trace"]}
# tracing-test = "=0.2.5"
